# zero_sum_game_algorithm

./: CMakeLists.txt  run_gui.sh  todo.txt
src/: main.cpp
src/ai/: Ai.hpp
src/game/: Board.cpp  Board.hpp  Edge.cpp  Edge.hpp  Game.hpp  HumanPlayer.hpp  Move.hpp  Player.hpp  XmlRpc.cpp  XmlRpc.hpp
src/python_gui/: gui.py  main.py  temp_client.py  xml_rpc_server.py
ut/: BoardEvaluationTests.hpp  BoardFirstPhaseTests.hpp  BoardSecondPhaseTests.hpp  BoardStateMachineTests.hpp  BoardTests.cpp  BoardTests.hpp  BoardThirdPhaseTests.hpp  EdgeTests.hpp  test.cpp
